Fix #69 and some spacing issues on profile detail stats.

--- a/raspberryio/static/less/site.less
+++ b/raspberryio/static/less/site.less
@@ -653,7 +653,7 @@ body#account {
 					color: @gray;
 					.border-radius(5px);
 					li {
-						span {
+						&.projects {
 							padding: 0 12px;
 							line-height: 36px;
 						}
